[metadata]
name = esca-py
version = attr: escparser.__version__
description = An advanced Python interpreter for ESC/P and ESC/P2 commands, efficiently and accurately converting your print workflows into precise vectorial PDFs.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ysard
author_email = ysard_git@gmx.fr
url = https://github.com/ysard/escapy

license_files = LICENSE
keywords = printer, dotmatrix, escp2, escp, pdf
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)

[options]
python_requires = >=3.10
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    reportlab[accel]>=4.0,<5.0
    lark>=1.2.2,<2.0
    numpy>=1.26.0
    platformdirs>=4.1.0,<5.0
    pillow

; For wheel package, MANIFEST.in is not followed
[options.packages.find]
exclude =
    tests
    tests.*
    poc
    poc.*

[options.extras_require]
dev =
    pytest-cov>=2.6.1
    pytest>=6.2.0
    zest.releaser[recommended]
    coverage-badge
    prospector
    pyroma
    check-manifest
doc =
    sphinx
    sphinx_rtd_theme>=1.0.0
    sphinx-argparse

[options.entry_points]
console_scripts =
    escapy = escparser.__main__:main

[zest.releaser]
create-wheel = yes
python-file-with-version = escparser/__init__.py
